[package]
name = "calltestj"
version = "0.1.0"
authors = ["zzzzzzzzzzz <zzzzzzzzzzzgg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zhscript2 = {version = "0.9.0", path = "../../zhscript2-rust", features = ["thread"]}
libloading = "0.5.0"
